# smart-park

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01aa7639864c_create_core_tables.py  6e279ba8084d_create_core_tables.py  dcffe4d52241_add_refresh_tokens.py
backend/app/: main.py
backend/app/api/: exception_handlers.py  openapi.py  router.py
backend/app/api/dependencies/: auth.py  database.py  roles.py  services.py
backend/app/api/middleware/: rate_limit.py  request_id.py
backend/app/api/routes/: applications.py  auth.py  barrier.py  health.py  supervisor.py
backend/app/core/: config.py  exceptions.py  logging.py  registration_number.py  security.py
backend/app/db/: base.py  engine.py  session.py
backend/app/models/: __init__.py  enums.py  parking_application.py  refresh_token.py  user.py
backend/app/repositories/: application_repository.py  refresh_token_repository.py  user_repository.py
backend/app/schemas/: application.py  auth.py  barrier.py  health.py  user.py
backend/app/services/: application_service.py  auth_service.py  barrier_service.py  health_service.py  user_service.py
backend/scripts/: seed_demo_users.py
backend/tests/integration/api/: test_applications.py  test_auth.py  test_cors.py  test_error_handling.py  test_health.py  test_request_id.py
backend/tests/unit/core/: test_security.py
backend/tests/unit/models/: test_enums.py  test_metadata.py
backend/tests/unit/services/: test_user_service.py
(+37 files in other folders)
